[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/BasicThemes.tres" type="Theme" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackGround" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Control" type="Control" parent="BackGround"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 39.0
theme = ExtResource( 2 )
text = "SnowMan
Platformer"
align = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 92.0
margin_top = 47.0
margin_right = -92.0
margin_bottom = -7.0

[node name="Buttons" type="Control" parent="AspectRatioContainer"]
margin_left = 5.0
margin_right = 131.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChooseLevel" type="Button" parent="AspectRatioContainer/Buttons"]
anchor_right = 1.0
anchor_bottom = 0.238095
theme = ExtResource( 2 )
text = "Choose"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Settings" type="Button" parent="AspectRatioContainer/Buttons"]
anchor_top = 0.761905
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
disabled = true
text = "settings"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartGame" type="Button" parent="AspectRatioContainer/Buttons"]
anchor_top = 0.380952
anchor_right = 1.0
anchor_bottom = 0.619048
theme = ExtResource( 2 )
text = "continue"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="AspectRatioContainer/Buttons/ChooseLevel" to="." method="_on_ChooseLevel_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="AspectRatioContainer/Buttons/StartGame" to="." method="_on_StartGame_pressed"]
